devorg/force-app/main/default/objects/Housing_payment__c/Housing_payment__c.object-meta.xml
<CustomObject>
    <label>Housing_payment</label>
    <nameField>
        <label>Housing_payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing_payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>