devorg/force-app/main/default/objects/Housing_payment__c/fields/Housing_user__c.field-meta.xml
<CustomField>
    <fullName>Housing_user__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Housing_user</label>
    <referenceTo>Housing_user__c</referenceTo>
    <relationshipLabel>Housing_payments</relationshipLabel>
    <relationshipName>Housing_payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>