devorg/force-app/main/default/objects/Housing_payment__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>