devorg/force-app/main/default/objects/Housing_payment__c/validationRules/Positive_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount value must be positive.</errorMessage>
</ValidationRule>